// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PollResults 10a) shows, that the polls fit on percentage of people and display it corecctly (Snapshot) 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="poll-result-distance"
      />
      <div
        class="line"
      />
      <div
        class="center"
      >
        <h2
          class="poll-result-title"
        >
          Poll Results:
        </h2>
      </div>
      <div>
        <div
          class="center"
        >
          <div
            class="container-poll-page"
          >
            <div
              class="poll-text-left"
            >
              <div
                class="poll-result"
              >
                2
              </div>
            </div>
            <div
              class="poll-text-right"
            >
              <div
                class="poll-result"
              >
                1
              </div>
            </div>
          </div>
        </div>
        <div
          class="center"
        >
          <div
            class="container-poll-page"
          >
            <div
              class="poll-text-left"
            >
              <div
                class="poll-result"
              >
                66.7
                %
              </div>
            </div>
            <div
              class="poll-text-right"
            >
              <div
                class="poll-result"
              >
                33.3
                %
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="poll-result-distance"
    />
    <div
      class="line"
    />
    <div
      class="center"
    >
      <h2
        class="poll-result-title"
      >
        Poll Results:
      </h2>
    </div>
    <div>
      <div
        class="center"
      >
        <div
          class="container-poll-page"
        >
          <div
            class="poll-text-left"
          >
            <div
              class="poll-result"
            >
              2
            </div>
          </div>
          <div
            class="poll-text-right"
          >
            <div
              class="poll-result"
            >
              1
            </div>
          </div>
        </div>
      </div>
      <div
        class="center"
      >
        <div
          class="container-poll-page"
        >
          <div
            class="poll-text-left"
          >
            <div
              class="poll-result"
            >
              66.7
              %
            </div>
          </div>
          <div
            class="poll-text-right"
          >
            <div
              class="poll-result"
            >
              33.3
              %
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PollResults 10b) shows, that the polls fit on percentage of people (%-numbers correct) 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="poll-result-distance"
      />
      <div
        class="line"
      />
      <div
        class="center"
      >
        <h2
          class="poll-result-title"
        >
          Poll Results:
        </h2>
      </div>
      <div>
        <div
          class="center"
        >
          <div
            class="container-poll-page"
          >
            <div
              class="poll-text-left"
            >
              <div
                class="poll-result"
              >
                7
              </div>
            </div>
            <div
              class="poll-text-right"
            >
              <div
                class="poll-result"
              >
                9
              </div>
            </div>
          </div>
        </div>
        <div
          class="center"
        >
          <div
            class="container-poll-page"
          >
            <div
              class="poll-text-left"
            >
              <div
                class="poll-result"
              >
                43.8
                %
              </div>
            </div>
            <div
              class="poll-text-right"
            >
              <div
                class="poll-result"
              >
                56.3
                %
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="poll-result-distance"
    />
    <div
      class="line"
    />
    <div
      class="center"
    >
      <h2
        class="poll-result-title"
      >
        Poll Results:
      </h2>
    </div>
    <div>
      <div
        class="center"
      >
        <div
          class="container-poll-page"
        >
          <div
            class="poll-text-left"
          >
            <div
              class="poll-result"
            >
              7
            </div>
          </div>
          <div
            class="poll-text-right"
          >
            <div
              class="poll-result"
            >
              9
            </div>
          </div>
        </div>
      </div>
      <div
        class="center"
      >
        <div
          class="container-poll-page"
        >
          <div
            class="poll-text-left"
          >
            <div
              class="poll-result"
            >
              43.8
              %
            </div>
          </div>
          <div
            class="poll-text-right"
          >
            <div
              class="poll-result"
            >
              56.3
              %
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
